--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,19 +13,25 @@
         android:theme="@style/Theme.Kelompok4"
         tools:targetApi="31">
         <activity
+            android:name=".MainActivity"
+            android:exported="false" />
+        <activity
+            android:name=".RegisterActivity"
+            android:exported="false" />
+
+        <activity
             android:name=".ui.jadwal.JadwalActivity"
-            android:exported="false"/>
+            android:exported="false" />
         <activity
             android:name=".ui.jadwal.TambahSlotActivity"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
+            android:name=".DefaultActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.Kelompok4">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
